syntax = "proto3";

package order;

option go_package = "/proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message Order {
    int32 id = 1;
    int32 customer_id = 2;
    int32 product_id = 3;
    int32 quantity = 4;
    float total = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message OrderId {
    int32 id = 1;
}

message ResponseStringOrder {
    string message = 1;
}

service OrderService {
    rpc Create(Order) returns (ResponseStringOrder);
    rpc GetOne(OrderId) returns (Order);
    rpc Update(Order) returns (ResponseStringOrder);
    rpc Delete(OrderId) returns (ResponseStringOrder);
    rpc GetAll(google.protobuf.Empty) returns (stream Order);
}